<resources>
    <string name="app_name">GosAgent</string>
    <string name="type1">type1</string>
    <string name="type2">type2</string>
    <string name="type3">type3</string>
    <string name="type4">type4</string>
    <string name="type5">type5</string>
    <string name="type6">type6</string>
    <string name="type7">type7</string>
    <string name="type8">type8</string>
    <string name="type9">type9</string>
    <string name="type10">type10</string>
    <string name="type11">type11</string>
    <string name="type12">type12</string>
    <string name="type13">type13</string>
    <string name="type14">type14</string>
    <string name="type15">type15</string>
    <string name="type16">type16</string>
    <string name="type17">type17</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="textview">TextView</string>
    <string name="title_activity_info_window_layout">info_window_layout</string>
    <string name="tab_text_1">Лот 1</string>
    <string name="tab_text_2">Лот 2</string>
    <string name="title_activity_info_window_layoutas">info_window_layoutas</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="text_type1">Аренда, безвозмездное пользование и иные договоры в отношении государственного и муниципального имущества</string>
    <string name="text_type2">\nАренда и продажа земельных участков, заключение договора о комплексном развитии территории\n</string>
    <string name="text_type3">Строительство</string>
    <string name="text_type5">Пользование участками недр</string>
    <string name="text_type6">Государственно-частное партнерство (соглашения о ГЧП/МЧП, концессионные соглашения)</string>
    <string name="text_type10">Водопользование</string>
    <string name="text_type8">Продажа государственного (муниципального) имущества и имущества госкомпаний</string>
    <string name="text_type7">Аренда лесных участков и продажа лесных насаждений</string>
    <string name="text_type4" />
    <string name="text_type_4">Охотхозяйственные соглашения</string>
    <string name="text_type3_1">Строительство</string>
    <string name="text_type15">Размещение рекламных конструкций</string>
    <string name="text_type9">Передача прав на единые технологии</string>
    <string name="text_type13">Реализация имущества должников</string>
    <string name="text_type11">Рыболовство и добыча водных биоресурсов</string>
    <string name="text_type14">Создание искусственных земельных участков</string>
    <string name="text_type12">ЖКХ</string>
    <string name="text_type16">Продажа объектов электроэнергетики</string>
    <string name="text_type17">Лицензии на оказание услуг связи</string>
    <string name="next">Next</string>
    <string name="Adress">Адрес:</string>
    <string name="price">Цена:</string>
    <string name="more">подробнее</string>
    <string name="select">выбрать</string>
    <string name="lot">Лот:</string>
    <string name="cityDefault">Введите город</string>
</resources>