<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.GosAgent.AppBarOverlay">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageType"
                    android:layout_width="55sp"
                    android:layout_height="55sp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_airport"
                    android:foregroundGravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numberLot"
                android:layout_toEndOf="@+id/icon">

                <TextView
                    android:id="@+id/textLot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_corner_view"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

        </RelativeLayout>
        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black">

        </androidx.fragment.app.FragmentContainerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/square_rounded">

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:background="@drawable/square_rounded">

            <TextView
                android:id="@+id/default_activity_button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:text="@string/lot"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37sp"
                android:layout_toEndOf="@+id/default_activity_button15"
                android:gravity="center_vertical"
                android:isScrollContainer="true"
                android:paddingVertical="5dp"
                android:paddingStart="15dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/square_rounded">

            <TextView
                android:id="@+id/default_activity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="@string/Adress"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:layout_toEndOf="@+id/default_activity_button"
                android:gravity="center_vertical"
                android:isScrollContainer="true"
                android:paddingVertical="5dp"
                android:paddingStart="15dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/square_rounded">


            <TextView
                android:id="@+id/default_activity_button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26sp"
                android:layout_toEndOf="@+id/default_activity_button12"
                android:gravity="center_vertical"
                android:isScrollContainer="true"
                android:paddingVertical="5dp"
                android:paddingStart="15dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            android:layout_margin="10dp"
            android:paddingVertical="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/square_rounded">

            <TextView
                android:id="@+id/textLink"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/material_on_background_disabled"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:gravity="center"
                app:cornerRadius="5sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--На счет добавления карты нужно подумать, пока не вижу необходимости -->
            <!--        <com.google.android.gms.maps.MapView-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="200dp"-->
            <!--            android:layout_marginTop="10dp"-->
            <!--            android:layout_marginStart="10dp"-->
            <!--            android:layout_marginEnd="10dp"-->
            <!--            android:apiKey="api key"-->
            <!--            />-->


            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="10sp"
                android:text="@string/select"
                app:cornerRadius="10dp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>